--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^4.4.20",
+    "@thirdweb-dev/sdk": "^4.0.47",
+    "ethers": "^5",
     "next": "14.1.3",
     "pino-pretty": "^10.3.1",
     "react": "^18",
-    "react-dom": "^18",
-    "thirdweb": "1.0.0-beta-0613c372ac5ce584c58d3485bfa34eefcd323322-20240316010329"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
